<resources>
    <string name="app_name">江湖情</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string-array name="gangs_position_icons">
        <item>@drawable/hostgang</item>
        <item>@drawable/vostgang</item>
        <item>@drawable/qinglong</item>
        <item>@drawable/whitetiger</item>
        <item>@drawable/rosefinch</item>
        <item>@drawable/xuanwu</item>
        <item>@drawable/tree</item>
        <item>@drawable/whitehorse</item>
        <item>@drawable/hongxiu</item>
        <item>@drawable/elite</item>
        <item>@drawable/masses</item>
    </string-array>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="prompt">Prompt</string>
    <string name="voice">Voice</string>
    <string name="newnotify">Receiving a new message</string>
    <string name="shake">Shake</string>
    <string name="yangshengqi">Use speaker</string>
    <string name="book_black">Black list</string>
</resources>