<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_height="220dp"
    android:clickable="true"
    android:background="@drawable/alter_bg"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_marginTop="15dp"
            android:text="@string/prompt"
            android:textColor="#333"
            android:visibility="visible"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/alert_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:layout_marginBottom="20dp"
            android:gravity="center_horizontal"
            android:padding="5dp"
            android:textColor="#333"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:singleLine="true"
            android:textColor="#444"
            android:textSize="16sp"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/image"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:scaleType="fitCenter"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/alter_button_bg"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
           android:layout_height="47dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center"
            android:onClick="cancel"
            android:text="@string/cancel"
            android:textColor="#666666"
            android:textSize="16sp"
            android:visibility="gone" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center"
            android:textColor="#333333"
            android:onClick="ok"
            android:text="@string/ok"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>
