<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_top_bar"
        android:background="@mipmap/actionbar_me"
        android:gravity="center_vertical" >

        <Button
            android:id="@+id/btn_back"
            android:layout_width="20dp"
            android:layout_height="30dp"
            android:background="@drawable/back"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"/>

        <TextView
            android:id="@+id/message_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="聊天设置"
            android:textSize="20sp" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/bg_me"
        android:fadingEdge="none" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >
                <View
                    android:layout_width="match_parent"
                    android:layout_height="4dip"
                    android:background="#ffffff" />
                <RelativeLayout
                    android:id="@+id/rl_switch_notification"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:background="@drawable/btn_bottom_selector">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:paddingLeft="10dip"
                        android:text="@string/newnotify"
                        android:textColor="@android:color/black"
                        android:textSize="18sp"
                        android:typeface="serif" />

                    <ImageView
                        android:id="@+id/iv_switch_open_notification"
                        android:layout_width="65dp"
                        android:layout_height="35dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:background="@mipmap/ic_setting"
                        android:visibility="visible" />

                    <ImageView
                        android:id="@+id/iv_switch_close_notification"
                        android:layout_width="65dp"
                        android:layout_height="35dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:background="@drawable/close_icon"
                        android:visibility="invisible" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="4dip"
                    android:background="#ffffff" />

                <RelativeLayout
                    android:id="@+id/rl_switch_sound"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:paddingRight="20dp"
                    android:paddingLeft="20dp"
                    android:background="@drawable/btn_bottom_selector">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:paddingLeft="10dip"
                        android:text="@string/voice"
                        android:textColor="@android:color/black"
                        android:textSize="18sp"
                        android:typeface="serif" />

                    <ImageView
                        android:id="@+id/iv_switch_open_sound"
                        android:layout_width="65dp"
                        android:layout_height="35dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:background="@mipmap/ic_setting"
                        android:visibility="visible" />

                    <ImageView
                        android:id="@+id/iv_switch_close_sound"
                        android:layout_width="65dp"
                        android:layout_height="35dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:background="@drawable/close_icon"
                        android:visibility="invisible" />
                </RelativeLayout>

                <View
                    android:id="@+id/textbox1"
                    android:layout_width="match_parent"
                    android:layout_height="4dip"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="#ffffff" />

                <RelativeLayout
                    android:id="@+id/rl_switch_vibrate"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:background="@drawable/btn_bottom_selector">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:paddingLeft="10dip"
                        android:text="@string/shake"
                        android:textColor="@android:color/black"
                        android:textSize="18sp"
                        android:typeface="serif" />

                    <ImageView
                        android:id="@+id/iv_switch_open_vibrate"
                        android:layout_width="65dp"
                        android:layout_height="35dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:background="@mipmap/ic_setting"
                        android:visibility="visible" />

                    <ImageView
                        android:id="@+id/iv_switch_close_vibrate"
                        android:layout_width="65dp"
                        android:layout_height="35dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:background="@drawable/close_icon"
                        android:visibility="invisible" />
                </RelativeLayout>
                <View
                    android:id="@+id/textbox2"
                    android:layout_width="match_parent"
                    android:layout_height="4dip"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="#ffffff" />
                <RelativeLayout
                    android:id="@+id/rl_switch_speaker"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:background="@drawable/btn_bottom_selector">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:paddingLeft="10dip"
                        android:text="@string/yangshengqi"
                        android:textColor="@android:color/black"
                        android:textSize="18sp"
                        android:typeface="serif" />

                    <ImageView
                        android:id="@+id/iv_switch_open_speaker"
                        android:layout_width="65dp"
                        android:layout_height="35dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:background="@mipmap/ic_setting"
                        android:visibility="visible" />

                    <ImageView
                        android:id="@+id/iv_switch_close_speaker"
                        android:layout_width="65dp"
                        android:layout_height="35dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:background="@drawable/close_icon"
                        android:visibility="invisible" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="4dip"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="#ffffff" />

                <LinearLayout
                    android:id="@+id/ll_black_list"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/btn_bottom_selector"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:paddingLeft="10dip"
                        android:text="@string/book_black"
                        android:textColor="@android:color/black"
                        android:textSize="18sp"/>
                </LinearLayout>
            </LinearLayout>

            <View
                android:id="@+id/textview4"
                android:layout_width="match_parent"
                android:layout_height="4dip"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#ffffff" />


        </LinearLayout>
    </ScrollView>

</LinearLayout>